[project]
name = "peft-model"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "fastapi[standard]>=0.115.13",
  "torch>=2.7.1",
  "transformers>=4.52.4",
  "uvicorn>=0.34.3",
]

[tool.uv.sources]
torch = { index = "pytorch" }

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[dependency-groups]
dev = ["httpx>=0.28.1", "pytest>=8.4.1"]
