[project]
name = "peft-model"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "peft>=0.16.0",
    "torch>=2.7.1",
    "transformers>=4.52.4",
]

[tool.uv.sources]
torch = { index = "pytorch" }

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[dependency-groups]
dev = ["httpx>=0.28.1", "pytest>=8.4.1"]
